// this file describes protocol buffer messages sent by the client when
// communicating with a zippylog server
package zippylog.protocol.request;

// requesting status of the zippylog server's store
message StoreInfo { }

// request to download part of a stream
message Get {
    // path of stream to retrieve
    optional string path = 1;

    // offset from start of stream from which to start sending data
    // this value has different meaning depending on the backing store of the
    // remote store. for filesystem stores, it likely corresponds to a byte
    // offset within a remote file
    optional uint64 start_offset = 2;

    // maximum number of bytes to send in response
    optional uint32 max_response_bytes = 3;

    // TODO support max events
}
